# pomodoroTimerQML

./: CMakeLists.txt  CTabButton.qml  CircularSlider.qml  Main.qml  appcore.cpp  appcore.h  main.cpp  qml.qrc
ui/: CircularSlider.qml  TasksView.qml  TimerView.qml
